--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,9 @@
-html
-html
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great course!</h1>
+<h1>Hello Coursera! It's a great course!!</h1>
 </body>
 </html>
