Added an unordered list.

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<meta charset="utf-8">
+	<title>Laura's Website</title>
 </head>
 <body>
 <h1>Hello world!</h1>
+<p>Hello! This is my website. I am currently learning how to code using HTML, CSS and Javascript for web developers on Coursera.</p>
+<h2>So far I have learnt:</h2>
+<ul>
+	<li>How to use github to create a website.</li>
+	<li>How to use HTML to organise the structure of the website.</li>
+</ul>
 </body>
 </html>
