--- a/site/index.html
+++ b/site/index.html
@@ -12,5 +12,7 @@
 	<li>How to use github to create a website.</li>
 	<li>How to use HTML to organise the structure of the website.</li>
 </ul>
+<p>More about me can be found <a href="aboutme.html">here.</a>
+</p>
 </body>
 </html>
